src/client/assets/sass/_colors.sass
// Styleguide:
// - Prefix names with color-
// - Name the variable as the color it represents, not its intended function
// - If the color includes an alpha channel suffix with -xx
// - If the color is an approximate match suffix with -approx
//  - Do not suffix '-solid' for exact matches
// - If the color already exists with -approx modifier, append a count -x starting at 2
// - Use only hyphens and lowercase characters
//
// Examples
// $color-blue: #0000ff
// $color-governor-bay-approx: #3B4CC4
// $color-governor-bay-approx-2: #3B4AC5
// $color-white-70: rgba(255, 255, 255, 0.7)
// $color-cerulean-45-approx: rgba(0, 173, 239, 0.45)
//
// Use a tool such as : http://name-of-color.com/ to find the name of your color


// Grays
$color-white: #FFFFFF                 // White
$color-black-haze-approx: #F4F7F8     // Light Gray
$color-white-smoke: #F5F5F5           // Light Gray 3
$color-gallery-approx: #EDEDED        // Light Gray 4
$color-cararra-approx: #EBEBEB        // Light Gray 2
$color-bombay-approx: #B1B3B6         // Gray
$color-mountain-mist-approx: #939598  // Medium Gray
$color-cape-cod-approx: #414042       // Dark Gray
$color-black: #000000                 // Black

// Reds
$color-red: #FF0000
$color-radical-red-approx: #F13B54  // Pink
$color-froly-approx: #F1757B        // Light Pink
$color-coral-approx: #F88954        // Orange
$color-lava: #CF1020                // Dark Pink

// Greens
$color-green: #00FF00
$color-green-crayola-approx: #23A27E    // Dark Green
$color-mountain-meadow-approx: #1DC58E  // Green
$color-viridian: #14855f // viridian
$color-tropical-rain-forest-approx: #00755E // Teal

// Blues
$color-blue: #0000FF
$color-ebony-clay-approx: #2B2E3E     // Dark Navy Blue
$color-martinique-approx: #33394D     // Navy Blue
$color-gun-power-approx: #3D445C      // Light Navy Blue
$color-storm-gray-approx: #6E7385     // Blue Gray
$color-blue-de-france-approx: #3397DB // Blue
$color-picton-blue-approx: #44BDE6    // Medium Blue
$color-pale-cerulean-approx: #95C3E3  // Light Blue 2
$color-polar-approx: #E2F5F6          // Light Blue
$color-palatinate-blue: #3374db    // Dark Blue

